Hama Change Log

Release 0.4 - Unreleased

  NEW FEATURES
   
   HAMA-451: Show Supersteps in waitForCompletion in YARN (tjungblut) 
   HAMA-479: Add Counters to Hama Jobs (edwardyoon) 
   HAMA-454: Add Zookeeper as synchronization service to YARN (tjungblut)
   HAMA-258: Add Input Output system (edwardyoon)
   HAMA-458: Add Message Combiner (edwardyoon)
   HAMA-456: Add getPeerName(int index) and getNumPeers() (edwardyoon)
   HAMA-431: MapReduce NG integration (tjungblut)
   HAMA-449: Add tasks num of Job to web UI (edwardyoon)
   HAMA-428: Create a separate maven module and add basic structure for the Graph (edwardyoon)
   HAMA-398: Add CheckPointer and saving messages for future fault-tolerant systems (ChiaHung Lin via edwardyoon)

  BUG FIXES

    HAMA-488: PageRank refactor and fix bugs (tjungblut via edwardyoon)
    HAMA-489: Check port availability before forking child process (edwardyoon)
    HAMA-474: ClusterStatus.getTasks() always returns 0 (edwardyoon)
    HAMA-472: The task should be killed if it fails to initialize (edwardyoon)
    HAMA-465: LocalJobRunner should support combiners and IO (tjungblut)
    HAMA-459: GroomServerStatus.countTask() always returns 1 (edwardyoon)
    HAMA-432: Add statusUpdate() method to BSPPeerProtocol (edwardyoon)
    HAMA-437: PiEstimator is not working in Local Mode (Thomas Jungblut)
    HAMA-387: Fixed barrier synchronization problem (ChiaHung Lin via edwardyoon)
    HAMA-436: Web Interface does not update Superstep Count (Thomas Jungblut)
    HAMA-429: Groom statuses should be reported periodically (ChiaHung Lin via edwardyoon)
    HAMA-421: Maven build issues using proxy (Joe Crobak via edwardyoon)

  IMPROVEMENTS
  
    HAMA-470: The web UI should display the version of running Hama cluster. (Suraj Menon via edwardyoon)
    HAMA-475: Add unit test for SSSP example (edwardyoon)
    HAMA-481: Add reopen to peer (tjungblut) 
    HAMA-471: Peer names should be sorted by task id (tjungblut)