@@ -27,7 +27,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.hama</groupId>
   <artifactId>hama-core</artifactId>
-  <name>Apache Hama Core</name>
+  <name>core</name>
   <version>0.4.0-incubating-SNAPSHOT</version>
   <packaging>jar</packaging>
   <scm>
