@@ -27,7 +27,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.hama</groupId>
   <artifactId>hama-examples</artifactId>
-  <name>Apache Hama Examples</name>
+  <name>examples</name>
   <version>0.4.0-incubating-SNAPSHOT</version>
   <packaging>jar</packaging>
 
