@@ -188,6 +188,7 @@
     <module>graph</module>
     <module>examples</module>
     <module>yarn</module>
+    <module>dist</module>
   </modules>
 
   <build>
@@ -228,6 +229,12 @@
         <artifactId>maven-antrun-plugin</artifactId>
         <version>1.6</version>
       </plugin>
+      
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2.2</version>
+      </plugin>
+        
     </plugins>
   </build>
   
