@@ -1,0 +1,76 @@
+<assembly xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2 http://maven.apache.org/xsd/assembly-1.1.2.xsd">
+  <id>core</id>
+  <formats>
+    <format>dir</format>
+    <format>tar.gz</format>
+    <format>zip</format>
+  </formats>
+  <includeBaseDirectory>false</includeBaseDirectory>
+  <moduleSets>
+    <moduleSet>
+    
+      <!-- Enable access to all projects in the current multimodule build! -->
+      <useAllReactorProjects>true</useAllReactorProjects>
+      
+      <!-- Now, select which projects to include in this module-set. -->
+      <includes>
+        <include>org.apache.hama:hama-core</include>
+        <include>org.apache.hama:hama-examples</include>
+        <include>org.apache.hama:hama-graph</include>
+      </includes>
+      <sources>
+        <outputDirectory>../${module.name}</outputDirectory>
+        <includes>
+          <include>*.xml</include>
+          <include>src/**</include>
+        </includes>
+        <fileSets>
+          <fileSet>
+            <directory>../</directory>
+            <includes>
+              <include>*.txt</include>
+              <include>*.xml</include>
+            </includes>
+            <outputDirectory>../</outputDirectory>
+          </fileSet>
+          <fileSet>
+            <directory>target/lib</directory>
+            <includes>
+              <include>*.jar</include>
+            </includes>
+            <fileMode>755</fileMode>
+            <outputDirectory>../lib</outputDirectory>
+          </fileSet>
+          <fileSet>
+            <directory>bin</directory>
+            <includes>
+              <include>hama</include>
+              <include>*.sh</include>
+            </includes>
+            <outputDirectory>../bin</outputDirectory>
+            <fileMode>755</fileMode>
+          </fileSet>
+          <fileSet>
+            <directory>conf</directory>
+            <includes>
+              <include>groomservers</include>
+              <include>hama-default.xml</include>
+              <include>hama-env.sh</include>
+              <include>hama-site.xml</include>
+              <include>log4j.properties</include>
+            </includes>
+            <outputDirectory>../conf</outputDirectory>
+            <fileMode>755</fileMode>
+          </fileSet>
+        </fileSets>
+      </sources>
+      <binaries>
+        <fileMode>755</fileMode>
+        <outputDirectory>../</outputDirectory>
+        <unpack>false</unpack>
+      </binaries>
+    </moduleSet>
+  </moduleSets>
+</assembly>
