@@ -26,7 +26,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.hama</groupId>
   <artifactId>hama-yarn</artifactId>
-  <name>Apache Hama YARN</name>
+  <name>yarn</name>
   <version>0.4.0-incubating-SNAPSHOT</version>
   <packaging>jar</packaging>
   <scm>
