@@ -4,6 +4,7 @@ Release 0.4 - Unreleased
 
   NEW FEATURES
    
+   HAMA-491: Add dist module to generate release tarball (edwardyoon)
    HAMA-451: Show Supersteps in waitForCompletion in YARN (tjungblut) 
    HAMA-479: Add Counters to Hama Jobs (edwardyoon) 
    HAMA-454: Add Zookeeper as synchronization service to YARN (tjungblut)
